Incorporated authentication using OAuth
