# routes/courses.js
@@ -2,6 +2,12 @@ const express = require("express");
 const router = new express.Router();
 const courseController = require("../controllers/courseController");
 const { validationRules, validate } = require("../middleware/validator.js");
+const { requiresAuth } = require('express-openid-connect');
+
+// Return user profile data
+router.get('/profile', requiresAuth(), (req, res) => {
+    res.send(JSON.stringify(req.oidc.user));
+  });
 
 // Get all courses
 router.get("/", courseController.getAllData);
@@ -12,6 +18,7 @@ router.get("/:courseId", courseController.getDataById);
 // Create new course
 router.post(
     "/", 
+    requiresAuth(),
     validationRules(),
     validate,
     courseController.createCourse
@@ -20,12 +27,17 @@ router.post(
 // Update course by id
 router.put(
     "/:id", 
+    requiresAuth(),
     validationRules(),
     validate,
     courseController.updateCourse
 );
 
 // Delete course by id
-router.delete("/:id", courseController.deleteCourse);
+router.delete(
+    "/:id", 
+    requiresAuth(),
+    courseController.deleteCourse
+);
 
 module.exports = router;
